--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,293 @@
-.App {
-  text-align: center;
+:root{
+  --blue: #007bc1;
+  --dark-blue: #004a75;
+  --orange: #ff8000;
+  --dark-orange: #cc6600;
+  --smoke-grey: #e5e5e5;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+html, body{
+  overflow-x: hidden;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
+.top{
+  /* background-color: #d4d4d4; */
+  background: linear-gradient(0deg, rgba(0, 74, 117, 0.51), rgba(0, 74, 117, 0.51)), url('./assets/images/background.jpg');  
+  background-size: cover;
+  width: 100%;
   min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+}
+
+.logo{
+  width: 45px;
+  height: 45px;
+}
+
+.p1{
+  font-size: 1.8em;
+  font-weight: 400;
   color: white;
 }
 
-.App-link {
-  color: #61dafb;
+.p2{
+  font-size: 1.38em;
+  font-weight: 700;
+  color: white;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.p3{
+  font-size: 1.1em;
+  color: white;
+}
+
+.p4{
+  font-size: 1.7rem;
+  font-weight: 600;
+}
+
+.p5{
+  font-size: 1.5em;
+  font-weight: 500;
+}
+
+.content{
+  text-align: center;  
+  height: auto;
+}
+
+.hc{
+  padding: 50px 0px 50px 0px;
+}
+
+.hdt{
+  font-size: 15px;
+  font-weight: 500;
+}
+
+.content-box-container{
+  width: 100%;
+  height: 100%;
+}
+
+.content-box{  
+  width: 100%;
+  display: flex;
+  justify-content: center;
+}
+
+.outer-box{
+  height: 80vh;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+
+.btn-contact{
+  border: 2px solid white;
+  border-radius: 5px;
+  font-weight: 600;
+  font-size: 1em;
+  padding: 2.5% 6% 2.5% 6%;
+}
+
+.highlight{
+  background-color: var(--smoke-grey);
+}
+
+.hp-container{
+  padding-bottom: 30px;
+}
+
+.hp-inner{
+  margin-left: 30px;
+  margin-right: 30px;
+  
+}
+
+.hp-title{
+  display: flex;
+  justify-content: space-between;
+  padding-bottom: 3px;
+}
+
+.hp-box{
+  border: 1.1px solid #adadad;
+  width: 100%;
+  box-sizing: border-box;
+  height: 86%;
+  margin-top: 10px;
+  margin-bottom: 20px;
+}
+
+.hp-box-inner{
+  margin: 15px;
+}
+
+.hp-icon{
+  font-size: 1.7em;
+  margin-top: -5px;
+  color: #adadad;
+}
+
+.hp-desc{
+  font-weight: 500;
+  font-size: 0.8em;
+}
+
+p{
+  margin: 0px 0 2px 0;
+}
+
+.highlight-text{
+  text-align: center;
+  margin-top: 40px;
+  margin-bottom: 40px;
+}
+
+.highlight-text > p{
+  color: #333333;
+}
+
+.panel-box-container{
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  width: 100%;
+}
+
+.panel-box-title{
+  display: flex;
+  flex-direction: row;
+}
+
+.panel-box-content{
+  border: 1px solid black;
+  margin: 18px 12px 0px 12px;
+  width: 30.5vw;
+  height: 25vh;
+}
+
+.footer{
+  height: 70px;
+  background-color: #050328;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  color: #c6ecfc;
+  font-size: 14px;
+}
+
+.empty-cookie{
+  width: 100%;
+  min-height: 70px;
+  display: block;
+}
+
+.cookie-container{
+  width: 100%;
+  background-color: var(--smoke-grey);
+  min-height: 70px;  
+  position: fixed;
+  opacity: 1;
+    -moz-transition: opacity 0.4s ease-in-out;
+    -o-transition: opacity 0.4s ease-in-out;
+    -webkit-transition: opacity 0.4s ease-in-out;
+    transition: opacity 0.4s ease-in-out;
+}
+
+.closed{
+  opacity: 0;
+  display: none;
+}
+
+.cookie-pop-up{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.cookie-text{
+  text-align: left;
+  font-size: 0.8em;
+  font-weight: 500;
+}
+
+.btn-cookie{
+    font-size: 0.9em;
+    margin: 10px 0px 15px 0px;
+}
+
+.nl-container{
+  width: 100%;  
+  position: fixed;
+  left: 0;
+  bottom: 0;
+}
+
+.nl-inner{
+  margin: 0 25px 0 25px;
+}
+
+.nl-content{
+  background-color: rgba(0, 123, 194, 0.9);
+  min-height: 220px;
+}
+
+.nl-close-button{
+  font-weight: 200;
+  font-size: medium;
+  color: white;
+  display: flex;
+  justify-content: flex-end;
+}
+
+.p6 {
+  font-size: 1.4em;
+  color: white;
+  font-weight: 600;
+}
+
+.nl-desc{
+  color: white;
+  font-weight: 300;
+  font-size: 1em;
+}
+
+.nl-form{
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+}
+
+.nl-input{
+  width: 100%;
+  border: none;
+  min-height: 30px;
+}
+
+.nl-input-container{
+  padding: 0 10px;
+}
+
+.nl-btn{
+  background: none;
+  border: none;
+  color: white;
+  cursor: pointer;
+}
+
+.btn-nl-container{
+  padding: 0 10px;
+}
+
+.btn-nl{
+  font-size: 0.82em;
+  font-weight: 500;
+  color: white;
+  width: 100%;
+}
+
+.none{
+  opacity: 1;
+  display: none;
 }
